<resources>
    <string name="app_name">Photo Streamer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter search here...</string>
    <string name="search">Search!</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="unsave">Unsave</string>
    <string name="go_feed">View feed...</string>
    <string name="go_search">Search for new images...</string>
</resources>
