<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SearchFragment">

    <EditText android:id="@+id/search_box"
        android:layout_height = "wrap_content"
        android:layout_width = "match_parent"
        android:hint="@string/search_hint"
        android:layout_gravity="top"
        android:layout_toLeftOf="@+id/search_button"
        android:layout_toStartOf="@+id/search_button" />

    <Button android:layout_height = "wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/search"
        android:id="@+id/search_button"
        android:layout_gravity="top"
        android:layout_alignBottom="@+id/search_box"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button android:layout_height = "wrap_content"
        android:id="@+id/back_button"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:layout_height = "wrap_content"
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/next_button"
        android:layout_centerHorizontal="true" />

    <Button android:layout_height = "wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/results_webView"
        android:layout_below="@+id/search_button"
        android:layout_above="@+id/back_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
