<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".FeedFragment">

    <Button android:layout_height = "wrap_content"
        android:id="@+id/back_button_feed"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/unsave_button_feed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button android:layout_height = "wrap_content"
        android:id="@+id/unsave_button_feed"
        android:text="@string/unsave"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/next_button_feed"
        android:layout_centerHorizontal="true" />

    <Button android:layout_height = "wrap_content"
        android:id="@+id/next_button_feed"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feed_webView"
        android:layout_above="@+id/back_button_feed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
